--- a/Scratch.html
+++ b/Scratch.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MK's Adventures</title>
-    <link rel="stylesheet" types="text/css" href="../css/Styles1.css">
+    <link rel="stylesheet" types="text/css" href="IS201/css/Styles1.css">
 </head>
 <body>
     <H1 id = "top">Michael Klintworths Adventures Around The World</H1>
