--- a/Scratch.html
+++ b/Scratch.html
@@ -7,18 +7,18 @@
     <link rel="stylesheet" types="text/css" href="css/styles1.css">
 </head>
 <body>
-    <H1 id = "top">Michael Klintworths Adventures Around The World</H1>
+    <H1 id = "top">Michael Klintworth's Adventures Around The World</H1>
     <a href="index.html"> Home page</a>
-    <H2> Fourite places</H2>
+    <H2> Favorite places</H2>
     <ul class="centered-list"> 
-        <li>Johanesburg, South Africa</li>
+        <li>Johannesburg, South Africa</li>
         <LI class="emphasize">Athens, Greece</LI>
         <li>Switzerland</li>
         <li>Scotland</li>
         <li>Ireland</li>
         <li>Northen Ireland</li>
         <li>Mexico</li>
-        <li>Enland</li>
+        <li>England</li>
         <li>Mozambique</li>
         <li class="emphasize">Bali, Indonisa</li>
     </ul>
