--- a/Scratch.html
+++ b/Scratch.html
@@ -31,7 +31,7 @@
     </ol>
     <br> 
     <p> I love to experience the many cultures that souround me! Learn their languages, eat their food and make life long memories</p>
-    <img src="../assets/img/Athens.jpeg" alt="Parthanon, Athens" width = "300"> <br>
+    <img src="assets/img/Athens.jpeg" alt="Parthanon, Athens" width = "300"> <br>
     <a href="https://en.wikipedia.org/wiki/Parthenon"> Pathenon, Athens, Greece</a>
     <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
     <a href="#top"> Scroll to top of page</a>
